# LogForWhat

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
lw-nft-contract/: Anchor.toml
lw-nft-contract/programs/lw-nft-contract/: Cargo.toml
lw-nft-contract/programs/lw-nft-contract/src/: lib.rs
lw-nft-contract/tests/: lw-nft-contract.ts
lw-smart-contract/: Anchor.toml  package.json
lw-smart-contract/programs/anchor-escrow/: Cargo.toml
lw-smart-contract/programs/anchor-escrow/src/: lib.rs
lw-smart-contract/tests/: anchor-escrow.ts
lw-solana-wallet/: my-keypair.json
server/: app.js  nftSmartContract.js  package-lock.json  package.json  pinta.json  solana.js  surveySmartContract.js
server/src/config/: db.js  db_secret.json
server/src/models/: NFTStorage.js  Survey.js  SurveyStorage.js  User.js  UserStorage.js
server/src/public/css/: input.css  loading.css  modalFrame.css
server/src/public/css/auth/: login.css  register.css
server/src/public/css/home/: common.css  main.css  myWallet.css  surveyInProgress.css  surveyNFTStore.css
server/src/public/css/nft/: nftInfo.css
server/src/public/js/: loading.js
server/src/routes/: index.js
server/src/routes/home/: auth.ctrl.js  home.ctrl.js  nft.ctrl.js  survey.ctrl.js
server/src/views/auth/: login.ejs  register.ejs
server/src/views/home/: myWallet.ejs  surveyInProgress.ejs  surveyNFTStore.ejs
server/src/views/nft/: createNFT.ejs  nftInfo.ejs
server/src/views/survey/: makingSurvey.ejs  survey.ejs  surveyInfo.ejs
server/src/views/tx/: txResult.ejs
(+15 files in other folders)
